# FastAPI-Crud

./: README.md  auth.py  blog.db  config.py  db.py  main.py  models.py  pyproject.toml  schemas.py
routers/: auth.py  posts.py  users.py
