[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
]
